--- a/moviepage.html
+++ b/moviepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/moviepage.css">
+    <link rel="stylesheet" href="moviepage.css">
 </head>
 <body>
         <div id="navigation">
