--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <header>
-            <img src="../Image/logo.png" alt="IMDb">
+            <img src="IMdb-Clone/Image/logo.png" alt="IMDb">
             <a href="favourite.html">Favourites</a>
             <input id="search-box" type="text" placeholder="Search Movies...">
         </header>
