--- a/moviepage.html
+++ b/moviepage.html
@@ -15,6 +15,6 @@
         <div class="moviecard">
             
         </div>
-<script src="moviepage.js"></script>        
+<script src="../IMdb-Clone/JavaScript-Files/moviepage.js"></script>        
 </body>
 </html>
